# adventofcode

./: .gitignore  README.md
01/: floorstop  main.c  part2.c  santafloors
02/: step1.py  step2.py
03/: osx.asm  part2.asm  shared.asm
04/: md5.c  md5.h  part1.c  part2.c
05/: part1.rb  part2.rb
06/: part1.cpp  part2_opencl.c
07/: shared.cpp
08/: part1.s
09/: part1.py
10/: part1.hs  part2.hs
11/: part12.c  part2.c
12/: part1.rkt
13/: part1.go  part2.go  shared.go
14/: part1.rs  shared.rs
15/: part1.py
16/: part1.sh
18/: part1.bf
2015/01/: part1.c
2015/03/: part1.asm  part2.asm
2015/04/: md5.h
2015/06/: ocl.cpp  part1.cpp  part1_opencl.c  part2.cpp
2015/07/: part1.cpp  part2.cpp
2015/08/: part2.s  support.c
2015/09/: part1.py  part2.py
2015/10/: part2.hs
2015/11/: part1.c
2015/12/: part2.rkt
2015/14/: part2.rs
2015/15/: part2.py
2015/16/: part2.sh
2015/17/: part1.cpp  part2.cpp
2015/18/: part1.bf  part2.bf
2015/19/: part1.py  part2.py
2015/20/: part1.py  part2.py
2015/21/: part1.py  part2.py
2015/22/: part2.py
2015/23/: jit.cpp  jit.h  part1.cpp  part2.cpp
2017/01/: part1.py  part2.py
2017/02/: main.c  part1.ll  part2.ll
2017/03/: part1.py  part2.py
2017/04/: part1.c  part2.c
2017/05/: input_img.txt  input_to_image.py  part1.circ  part2.circ
2017/06/: part1.rs  part2.rs
2017/07/: part1.py  part2.py  shared.py
2017/08/: assemble.py  part1.c  part1.v  part2.c  part2.v
2017/09/: part1.py  part2.py
2019/01/: part1.rs  part2.rs
2019/02/: part1.rs  part2.rs
2019/03/: part1.rs  part2.rs
2020/01/: part1.rs  part2.rs
2020/02/: part1.sh  part2.sh
2020/03/: part1.wat  part2.wat
2020/04/: part1.c  part2.c
2020/05/: part1.py  part2.py
2020/06/: part1.js  part2.js
2020/07/: part1.py  part2.py  shared.py
2020/08/: part1.py  part2.py  shared.py
2020/09/: part1.cpp  part2.cpp
2020/10/: part1.fsx  part2.fsx
2020/11/: part1.zig  part2.zig
2020/12/: part1.rs  part2.rs
2020/13/: part1.py  part2.py
2020/14/: part1.py  part2.py
2020/15/: part1.py  part2.py
2020/16/: part1.py  part2.py
2020/17/: part1.py  part2.py
2020/18/: part1.c  part2.c
2020/19/: cyk.py  part1.py  part2.py
2020/20/: part1.py  part2.py
2020/21/: part1.py  part2.py
2020/22/: part1.py  part2.py
2020/23/: part1.py  part2.py
2020/24/: part1.py  part2.py
2020/25/: part1.py
2021/01/: part1.py  part2.py
2021/02/: part1.zig  part2.zig
2021/03/: part1.py  part2.py
2021/04/: part1.py  part2.py
2021/05/: part1.js  part2.js
2021/06/: part1.py
2021/07/: part1.rs  part2.rs
2021/08/: part1.py  part2.py
2021/09/: part1.lua  part2.lua
2021/10/: part1.asm  part2.asm
2021/11/: part1.c  part2.c
2021/12/: part1.py  part2.py
2021/13/: part1.py  part2.py
2021/14/: part1.py
2021/15/: part1.csx  part2.csx
2021/16/: part1.c  part2.c
2021/17/: part1.cu  part2.cu
2021/18/: part1.ml  part2.ml
2021/19/: part1.py  part2.py
2021/20/: part1.py  part2.py
2021/21/: part1.py  part2.py
2021/22/: part1.py  part2.py
2021/23/: part1.cpp  part2.cpp
2021/24/: part1.c  part2.c  x64a.h  x64a_gen.py
2021/25/: part1.py
2022/: .gitignore  Cargo.toml  test.rs
2022/01/: part1.rs  part2.rs
2022/02/: common.rs  part1.rs  part2.rs
2022/03/: part1.rs  part2.rs
2022/04/: common.rs  part1.rs  part2.rs
2022/05/: common.rs  part1.rs  part2.rs
2022/06/: common.rs  part1.rs  part2.rs
2022/07/: common.rs  part1.rs  part2.rs
2022/08/: common.rs  part1.rs  part2.rs
2022/09/: common.rs  part1.rs  part2.rs
2022/10/: common.rs  part1.rs  part2.rs
2022/11/: common.rs  monkey.pest  part1.rs  part2.rs
2022/12/: common.rs  part1.rs  part2.rs
2022/13/: common.rs  part1.rs  part2.rs
2022/14/: common.rs  part1.rs  part2.rs
2022/15/: common.rs  part1.rs  part2.rs
2022/16/: common.rs  part1.rs  part2.rs
2022/17/: common.rs  part1.rs  part2.rs
2022/18/: part1.rs  part2.rs
2022/19/: common.rs  part1.rs  part2.rs
2022/20/: part1.rs  part2.rs
2022/21/: common.rs  part1.rs  part2.rs
2022/22/: common.rs  part1.rs  part2.rs
2022/23/: part1.rs  part2.rs
2022/24/: common.rs  part1.rs  part2.rs
2022/25/: part1.rs  part2.rs
22/: part1.py
24/: part1.py  part2.py
25/: part1.py
