[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"
default-run = "test"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
derive_more = "0.99.17"
pest = "2.5.1"
pest_derive = "2.5.1"

[[bin]]
name = "day01-part1"
path = "01/part1.rs"

[[bin]]
name = "day01-part2"
path = "01/part2.rs"

[[bin]]
name = "day02-part1"
path = "02/part1.rs"

[[bin]]
name = "day02-part2"
path = "02/part2.rs"

[[bin]]
name = "day03-part1"
path = "03/part1.rs"

[[bin]]
name = "day03-part2"
path = "03/part2.rs"

[[bin]]
name = "day04-part1"
path = "04/part1.rs"

[[bin]]
name = "day04-part2"
path = "04/part2.rs"

[[bin]]
name = "day05-part1"
path = "05/part1.rs"

[[bin]]
name = "day05-part2"
path = "05/part2.rs"

[[bin]]
name = "day06-part1"
path = "06/part1.rs"

[[bin]]
name = "day06-part2"
path = "06/part2.rs"

[[bin]]
name = "day07-part1"
path = "07/part1.rs"

[[bin]]
name = "day07-part2"
path = "07/part2.rs"

[[bin]]
name = "day08-part1"
path = "08/part1.rs"

[[bin]]
name = "day08-part2"
path = "08/part2.rs"

[[bin]]
name = "day09-part1"
path = "09/part1.rs"

[[bin]]
name = "day09-part2"
path = "09/part2.rs"

[[bin]]
name = "day10-part1"
path = "10/part1.rs"

[[bin]]
name = "day10-part2"
path = "10/part2.rs"

[[bin]]
name = "day11-part1"
path = "11/part1.rs"

[[bin]]
name = "day11-part2"
path = "11/part2.rs"

[[bin]]
name = "day12-part1"
path = "12/part1.rs"

[[bin]]
name = "day12-part2"
path = "12/part2.rs"

[[bin]]
name = "day13-part1"
path = "13/part1.rs"

[[bin]]
name = "day13-part2"
path = "13/part2.rs"

[[bin]]
name = "test"
path = "test.rs"
